--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
 
   <!-- audio -->
   <audio controls autoplay class="player">
-    <source src="/chachacha.ogg" type="audio/ogg">
-    <source src="/chachacha.mp3" type="audio/mpeg">
+    <source src="https://github.com/abarretov/valentine-day/blob/main/chachacha.ogg?raw=true" type="audio/ogg">
+    <source src="https://github.com/abarretov/valentine-day/blob/main/chachacha.mp3?raw=true" type="audio/mpeg">
     Your browser does not support the audio element
   </audio>
 
